--- a/steins_gate_0/docs/0019.md
+++ b/steins_gate_0/docs/0019.md
@@ -8,24 +8,24 @@
 “突然说出这种话……太不负责任了！”  
 貌似终于理解了我的话的意义，比屋定真帆表现出了愤怒。  
 “*Maho*，请镇定点。  
-&emsp;&emsp; 这个测试，应该说是建立在*Rintaro*的善意之上的啊。  
-&emsp;&emsp; 但是他肯接受这一点，我们应该谢天谢地。  
+&emsp;&emsp; 这个测试，应该说是建立在 *Rintaro* 的善意之上的。  
+&emsp;&emsp; 他肯接受这一点，我们应该心怀感激。  
 &emsp;&emsp; 在这里放弃也不算是不负责任的，没事的。”  
-雷斯吉宁教授一边笑着如此说着，一边想要与我握手。握着那只巨大的手的同时，我也因为无法直视他的眼睛而低下了头。  
+雷斯吉宁教授带着笑容说着，向我伸出了手。握住那只巨大的手的同时，我也因为无法直视他的眼睛而低下了头。  
 “对不起……”  
 “只是，以我而言，可以的话希望你能继续下去。  
-&emsp;&emsp; 我大致地看了下记录，发现你们在相当频繁地进行着对话不是吗？  
-&emsp;&emsp; 而且，‘*Kurisu*’的说话方式与在研究室和我们交谈时有很大不同。  
+&emsp;&emsp; 我大致看了下记录，发现你们在相当频繁地进行着对话不是吗？  
+&emsp;&emsp; 而且，*‘Kurisu’* 的说话方式与和我们交谈时有很大不同。  
 &emsp;&emsp; 人是社会性的生物，会因为对象和情况而改变言行。  
 &emsp;&emsp; 也可以将此看作是也能重现那样的行为吧。  
 &emsp;&emsp; 正因为如此，才想要让测试再继续进行一段时间。  
-&emsp;&emsp; 顺便一提，想要放弃的理由是什么？与『Amadeus』对话很辛苦吗？”  
+&emsp;&emsp; 顺便一提，想放弃的理由是什么？与『Amadeus』对话很辛苦吗？”  
 “不……正相反。”  
 “相反？”  
 “与『Amadeus』……与‘红莉栖’对话非常开心。但是……就是这一点让我很害怕。”  
 关于自己心中喷涌而出的感情，虽然一点都没能理清，却还是拼命地说明着，对于将红莉栖和“红莉栖”看作是同一个个体的自己，感到非常害怕。  
 “果然，给你增添负担了啊，真的抱歉。只是，你的反应非常令人感兴趣。  
-&emsp;&emsp; 你能够从非研究者的观点上把握『Amadeus』，也能让我学到不少——  
+&emsp;&emsp; 你能够从非研究者的观点上把握『Amadeus』，也让我学到不少——  
 &emsp;&emsp; 希望你能原谅我以这种方式表达，毕竟我本质上也是个研究者啊。”  
 “不……我也知道我是在说任性话。”  
 从刚才开始比屋定真帆就一句话也不说，一脸不高兴的样子，一味地检查着『Amadeus』的记录的样子。我都快待不下去了，真希望不要在我在的时候看记录啊。  
@@ -33,15 +33,15 @@
 &emsp;&emsp; 只是，登录权限就这样留在你的手机上，你不介意吧？”  
 “欸？”  
 “今后，与『Amadeus』对话也好，不对话也好，都是你的自由。  
-&emsp;&emsp; ‘*Kurisu*’那边，我会和她说不要与你联络的。  
-&emsp;&emsp; 我们不想今天至此就结束与你的关系啊，  
-&emsp;&emsp; 不仅仅是难得认识的日本友人，而且……*Maho*也会感到寂寞啊。”  
+&emsp;&emsp; *‘Kurisu’* 那边，我会和她说不要主动联络你的。  
+&emsp;&emsp; 我们不想至此就结束与你的关系啊，  
+&emsp;&emsp; 不仅是难得认识的日本友人，而且……*Maho* 也会感到寂寞啊。”  
 “教授！”  
 “哈哈哈。”  
 “我知道了……”  
 对于比屋定真帆的抗议，教授笑着略过。而对我来说，虽然无法否认有被强迫的感觉，却也不想就此结束与雷斯吉宁教授的关系。因为以维克多·孔多利亚大学为目标这点并没有改变。  
 这时，雷斯吉宁教授的手机响了起来。  
-“喔，抱歉，接个电话。*Maho*，要在此期间与*Rintaro*和好哦。”  
+“喔，抱歉，接个电话。*Maho*，要在此期间与 *Rintaro* 和好哦。”  
 调皮地使了个颜色后雷斯吉宁教授走出了房间。剩下我与比屋定真帆两个人了。  
 “对不起，刚刚大吼大叫的……”  
 “不，没事。”  
@@ -96,33 +96,34 @@
 &emsp;&emsp; 按照其证词，说犯人看起来不像是普通的纵火犯。”  
 “那是指……？”  
 “多人犯案……说是看起来像是特殊部队。  
-&emsp;&emsp; 几乎没怎么说话，点着火以后马上乘坐边上停着的车离开了的样子。  
-&emsp;&emsp; 不知道这种说法是不是正确……看起来非常熟练，火势蔓延也异常迅速。”  
+&emsp;&emsp; 几乎没怎么说话，点着火以后马上乘边上停着的车离开了。  
+&emsp;&emsp; 不知道这种说法对不对……看起来非常熟练，火势蔓延也异常迅速。”  
 ……不是普通的纵火犯而是专业的犯罪，是想这么说吗？我无法用“那怎么可能”一笑带过。因为，这个世界中那样的人真实存在，我是知道的。  
 “还有——据说那些犯人们……说着俄语。”  
 俄语……俄罗斯——瞬间联想到的，就是中钵的事了。半年前，他从自己的女儿——红莉栖那里，盗取了关于时间机器的论文，并以此为见面礼逃到了俄罗斯。难道说，与这件事有关联？  
-“另外还有一点。红莉栖刚去世的那会儿，我们的研究室也发生了奇怪的事。  
+“另外还有一点。红莉栖刚去世那会儿，我们研究室也发生了奇怪的事。  
 &emsp;&emsp; 与当地警察一起，自称日本刑警的人也来了，说是日美联合调查。  
 &emsp;&emsp; 有关红莉栖的事件调查，我们当然尽可能地进行了协助。  
-&emsp;&emsp; 但是过些日子，大学向警方询问时，被告知没有那样的刑警从日本过来。”  
+&emsp;&emsp; 但是过些日子，大学向警方询问时，  
+&emsp;&emsp; 被告知没有那样的刑警从日本过来。”  
 “那么，那个日本刑警是假冒的？”  
-“还不止那样，当地警察也说没有搜查过我们的研究室。  
-&emsp;&emsp; 也就是说，何止日本刑警，自称警察来访的所有人都是——”  
+“不止那样，当地警察也说没有搜查过我们的研究室。  
+&emsp;&emsp; 也就是说，不只是日本刑警，自称警察来访的所有人都是——”  
 “都是假的……”  
 “有了那样的事情之后，我……”  
 比屋定真帆说到这，用自己的手臂抱紧了那微微颤抖的身体。  
 “我……怀疑红莉栖的死有什么黑幕。虽然我不是阴谋论者。”  
 “……”  
-“该不会因为什么其他的原因导致红莉栖被杀害，而事实被埋葬与黑暗……我是这么想的。”  
+“该不会有什么其他原因导致红莉栖遇害，而事实被埋葬于黑暗……我是这么想的。”  
 “…………”  
 杀害红莉栖的，是我。那个事实，没有被公布，以后也不会被公布吧……因为时间旅行者杀人什么的，谁也无法证明。警察发表的认定结果是，当时有国外盗窃团伙入侵广播管的仓库，红莉栖因目击了这一犯罪而被杀害了。而后因为警察追捕的盗窃团伙现在逃到了国外，正在进行国际通缉中。另外，我杀害红莉栖的时候，现场还有另一个人在场——中钵博士。那个男人的名字也一概没有出现，令人很不舒服。俄罗斯、SERN、时间机器……想到铃羽——不，这里应该称呼约翰·提托吧——所描述的未来，说是还有不到10年，第三次世界大战就会发生，而发生的契机正是时间机器。欧盟和俄罗斯之间的时间机器开发竞争成为火种，后来美国也强硬地参与其中。说不定我，我们，现在不正是处在，会导致50多亿人死去的战争的，最初着火点的旋涡中吗？不得不让人这么觉得。  
 “这样下去，红莉栖不会瞑目的。我想知道真相。”  
 “想知道……真相？”  
-我不禁惊讶地看着真帆的脸。危险。知道了那种事的话，她毫无疑问会暴露在危险之中。  
+我不禁惊讶地看着真帆。危险。知道了那种事的话，她毫无疑问会陷入危险之中。  
 ——撕裂深夜的帷幕袭击过来的Rounder成员们；  
 ——被子弹击穿头部，在我怀中断气的，我重要的青梅竹马；  
 ——在那之后，让人产生无限轮回的错觉一般重复着的，噩梦一样的循环……  
-α世界线的种种被毫无道理可言地袭击的事实，在脑海中复苏。我差点就痛苦得叫了出来。  
+α世界线的种种被不讲理地袭击的事实，在脑海中复苏，我差点痛苦得叫出来。  
 “但是，那……那还是交给警察比较好……”  
 “是这样吗？”  
 “至少……不要以为自己能做些什么。人类个体的力量，实在是过于微弱了。”  
