--- a/steins_gate_0/docs/0021.md
+++ b/steins_gate_0/docs/0021.md
@@ -3,10 +3,10 @@
 > [ 间章 2010/12/15 ] 铃羽救了冈伦三人后生病，在LAB得到桶子、真由理、由季照顾。
 
 有点头晕目眩。铃羽感觉不对劲，于是停了下来。由于她突然在马路的正中间站下，其他行人都一脸不满地躲着她。她深呼吸，等了一会儿，目眩仍不见好转。甚至连站立都有些困难了。眼前的景色如水波一样扭曲，难道是自己的错觉吗？自己仿佛是潜入了水里面，往来的喧嚣听起来渐渐远去。  
-——难不成，这就是冈伦叔叔所说的*Reading·Steiner*？自己也出现这种迹象了吗？  
+——难不成，这就是冈伦叔叔所说的 *Reading·Steiner* ？自己也出现这种迹象了吗？  
 铃羽想到这，感觉身体发烧，意识终于回到了现实。  
 身体不舒服吗，我这是……？  
-铃羽蹒跚着回到了Lab。她感觉状态要比想象中差很多，恨不得当场蹲下来。在部队的战火中，还有跟父亲的组织汇合以后，铃羽经历过数次重伤昏迷。然而，自从经历了时间旅行，这种状态还是头一遭。  
+铃羽蹒跚着回到了LAB。她感觉状态要比想象中差很多，恨不得当场蹲下来。在部队的战火中，还有跟父亲的组织汇合以后，铃羽经历过数次重伤昏迷。然而，自从经历了时间旅行，这种状态还是头一遭。  
 “不妙啊……”  
 抬头看了看二楼窗户，灯还亮着。明白父亲还在，铃羽松了一口气，上楼了。门没锁。她发声有些困难，于是默不作声地想要脱鞋，然而绊了一跤。  
 “啊！好疼……”  
