--- a/steins_gate_0/docs/0020.md
+++ b/steins_gate_0/docs/0020.md
@@ -19,24 +19,25 @@
 
 ![](../pics/030.png)
 
-“谁！？”
+“谁！？”  
 有点眼熟，感觉是在哪里见过的。是哪里？刻意去想然而一点也想不起来。  
 男人站在那里，嘴里不停地自言自语着：  
-“这世界有祸了，因为将人绊倒；  
-&emsp;&emsp; 绊倒人的事是免不了的，但那绊倒人的有祸了！  
-&emsp;&emsp; 倘若你一只手或是一只脚叫你跌倒，就砍下来丢掉！  
-&emsp;&emsp; 你缺一只手或是一只脚进入永生，强如有两手两脚被丢在永火里。  
-&emsp;&emsp; 倘若你一只眼叫你跌倒，就把它剜出来丢掉！  
-&emsp;&emsp; 你只有一只眼进入永生，强如有两只眼被丢在地狱的火里。  
-&emsp;&emsp; （注：以上引自马太福音18:718:8）”  
+<abbr title="引自马太福音18:718:8">
+***“这世界有祸了，因为将人绊倒；  
+绊倒人的事是免不了的，但那绊倒人的有祸了！  
+倘若你一只手或是一只脚叫你跌倒，就砍下来丢掉！  
+你缺一只手或是一只脚进入永生，强如有两手两脚被丢在永火里。  
+倘若你一只眼叫你跌倒，就把它剜出来丢掉！  
+你只有一只眼进入永生，强如有两只眼被丢在地狱的火里。”***  
+</abbr>
 男人浑身散发着异样的魄力和狂气，再次把那似乎是枪的物体指向这边。  
-“神所赐予的灵魂，是只有作为神之子的我们才具有的……绝对不会存在于硅晶之上！”  
+“神所赐予的灵魂，是只有作为神之子的我们才具有的……绝对不会存于硅晶之上！”  
 “呜啊啊啊啊啊！！”  
 站起来的井崎，因为太过恐怖转过身去，脱兔一样地逃跑了。  
 “piu——”  
 又是那个声音！太过于安静的细小，完全无法想象到那是枪声。但这次车窗并没有破，我的身上也没有被开洞。打偏了？难道被井崎的行动分心了吗？但是没有下次了。动起来！  
 先把比屋定真帆塞进后座，然后我爬进了驾驶室。幸好车子的引擎一直是发动着的。连关门的时间都不想浪费，我一口气使劲把油门踩到底。激烈的引擎声浪让地下的空气激荡起来，袭击者也被这震耳欲聋的声音和震动吓了一跳。然而，车子完全没有前进的意思，一动不动。  
-“*Shift（换挡）！*”  
+“*Shift*（换挡）！”  
 “不把档挂上是不行的啊！”  
 后座上低着头的雷斯吉宁教授和比屋定真帆，发出不输于引擎声的怒吼。总之先把脚从油门上拿开，看了看手边的换挡杆，现在是放在写着N字的地方。  
 “到底要怎么办！？”  
@@ -104,7 +105,7 @@
 “不记得了？是你喊出异议反驳的那个人。”  
 “啊……！”  
 对了。因为说了像是侮辱红莉栖的发言，所以我一生气站起来反驳他的那个男人。难道说……因此对我产生了仇恨？不会吧……  
-“‘……神所赐予的灵魂，是只有作为神之子的我们才具有的……绝对不会存在于硅晶之上……’”  
+“神所赐予的灵魂，是只有作为神之子的我们才具有的，绝对不会存于硅晶之上……”  
 “你说什么？”
 “他在开枪之前说的。”  
 “……他是指……『Amadeus』吗？”  
