--- a/steins_gate_0/docs/0022.md
+++ b/steins_gate_0/docs/0022.md
@@ -33,7 +33,7 @@
 “真由姐做的吗？”  
 “嗯~托由季的福，真由喜的厨艺在突飞猛进的哦！”  
 “爸……哥哥呢？”  
-“去*MayQueen*了哦~据说那之后有打工。”  
+“去 *MayQueen* 了哦~据说那之后有打工。”  
 “这样啊……”  
 “啊，你在想既然桶子君不在，晚上要出门之类的吧？不可以的哦！”  
 “没事……”  
@@ -71,7 +71,7 @@
 “打完工回来的时候准备顺道再来这边一趟。想那个时候吃~”  
 “那我做点沙拉什么的放着，和那一起吃吧。”  
 “谢谢，由季。我很期待呢~”  
-真由理一边执着地提醒着铃羽“不睡觉可不行哦——”，一边出门去*MayQueen+Nyan2*了。
+真由理反复叮嘱铃羽“不睡觉可不行哦——”，出门去 *MayQueen+Nyan²* 了。
 
 留下来的由季把真由理做的炖菜稍微调整了一下味道，关掉了火。  
 “啊，对了，铃羽小姐，出汗了吧？吃饭前，给你擦擦身体吧？”  
@@ -93,7 +93,7 @@
 “不用了。我不是小孩子，可以自己做的。”  
 “但是没办法好好擦干啊……”  
 “说了不用了！”  
-对于铃羽的突然发火，由季露出了有些吃惊的表情，很快把浸了热水的毛巾拧干递了过去。  
+对于铃羽突然的发火，由季带着吃惊的表情，快速把浸了热水的毛巾拧干递过去。  
 “对、对不起……讨厌被触碰的人也是存在的呢。”  
 “唔……是我不好。不小心喊了出来。”  
 “热水，放在桌子上了。我去准备晚饭了。”  
@@ -103,7 +103,7 @@
 “妈妈……”  
 至今仍能回忆起，噩梦一般的那一天。导致母亲死亡的无数子弹，贯穿母亲的内脏，从而渐渐失去动能，最后陷入了被母亲抱在怀中的，铃羽的皮肤上。母亲的血和肉片大量滴落。然后，皮肤留下了恐怕终生都无法消除的伤。这对于铃羽而言，正是等同于母亲的墓碑。  
 “唔……”  
-铃羽像是要摆脱噩梦一样地猛烈摇晃起头。上半身之后是下半身，连脚都擦干净后，铃羽拿出了新内衣穿在身上，再穿上洗好的衣服，终于松了一口气。  
+铃羽像是要摆脱噩梦一样地猛烈摇了摇头。上半身之后是下半身，连脚都擦干净后，铃羽拿出了新内衣穿在身上，再穿上洗好的衣服，终于松了一口气。  
 
 回到房间时，由季正将盛着沙拉的碗和炖菜锅摆在桌上。  
 四目相对，拘谨的沉默充满了房间。  
@@ -128,11 +128,11 @@
 “你刚刚也说了类似的话。”  
 “是这样吗？”  
 “嗯。”  
-那之后，对话中断了一会儿。铃羽一边哧溜哧溜地略不合礼仪地吃着食物，一边想着话题。  
+之后，对话中断了。铃羽一边哧溜哧溜地略不合礼仪地吃着食物，一边想着话题。  
 
 ![](../pics/034.png)
 
-这次是铃羽打破了沉默。也有想起不好回忆的原因，铃羽没法忍受和由季在一起时的沉默。  
+也有想起不好回忆的原因，铃羽没法忍受和由季在一起时的沉默，于是开了口：  
 “嗯……刚刚的歌，是什么？”  
 “歌？”  
 “你在淋浴间里，那个……”  
