--- a/steins_gate_0/docs/0023.md
+++ b/steins_gate_0/docs/0023.md
@@ -3,7 +3,7 @@
 > [ 2010/12/21 ] MayQueen，冈伦和桶子讨论关于篝和红莉栖笔记本和移动硬盘的问题。
 
 “欢迎回来喵，主人~”  
-一进入女仆咖啡店*MayQueen+Nyan²*，就听到了工作中的猫耳女仆们朝气蓬勃的欢迎。因为是工作日的傍晚，即使是这样的高人气店，也能看到空位。也因此菲利斯有空亲自来接待我。  
+一进入女仆咖啡店 *MayQueen+Nyan²* ，就听到了工作中的猫耳女仆们朝气蓬勃的欢迎。因为是工作日的傍晚，即使是这样的高人气店，也能看到空位。也因此菲利斯有空亲自来接待我。  
 “欢迎回来喵~凶真——不对，冈伦~”  
 “啊。那个，今天，真由理呢？”  
 “真由喜的话，马上就来了喵。还有大概30分钟。”  
@@ -109,7 +109,7 @@
 “在我知道的范围里面……没有。”  
 “那，先把名字放在一边，和真由喜关系特别好的女性朋友都有哪些呢？”  
 “嗯，这样的话……应该是有一个从小学到中学一直都在一起玩的社团里的人来着——”  
-把那个名字告诉了桶子。高中以后的，就不用再特意说了，我知道的桶子应该也是清楚的。关系特别好的，就是cosplay社团的吹雪、枫还有由季，还有就是，和菲利斯一起的*MayQueen+Nyan²*的女孩子们。再有的话，虽然不是女孩子，但是琉华应该也能算是关系比较亲密的朋友了吧。  
+把那个名字告诉了桶子。高中以后的，就不用再特意说了，我知道的桶子应该也是清楚的。关系特别好的，就是cosplay社团的吹雪、枫还有由季，还有就是，和菲利斯一起的 *MayQueen+Nyan²* 的女孩子们。再有的话，虽然不是女孩子，但是琉华应该也能算是关系比较亲密的朋友了吧。  
 “——我能够回答出来的就是这种程度了。和你知道的内容是差不多的。抱歉啊。”  
 “不，就算是这样也很充分了。帮大忙了。”  
 桶子拿出手机，把我说出来的名字都记到备忘录里。  
@@ -222,7 +222,7 @@ nüer……nǚér……女儿？
 「哈？你们写的？那样的话，你们自己还能解不开吗？」  
 『我们想的是，既然要加密，如果不到类似做不出解毒剂的毒药那种水平就没意义了』  
 「也就是说你们也没有解密的方法？明明是自己做出来的东西？」  
-『*Exactly*  
+『Exactly  
 &emsp;如果我们能解谜的话，那也就是说，  
 &emsp;和我们同样级别的黑客也都可以的吧？那样的怎么看都不行吧常考』  
 「原来如此」  
