--- a/steins_gate_0/docs/0024.md
+++ b/steins_gate_0/docs/0024.md
@@ -145,21 +145,21 @@
 “为什么会变成这样啊……”  
 “我这可是为了前辈好而在操心啊。”  
 “你啊……退一步说，今天我还要等教授回来之后和他作报告——”  
-“哟！*Rintaro*！*Maho*！在说什么呢？”  
+“*Yo! Rintaro! Maho!* 在说什么呢？”  
 在这绝妙的时机，雷斯吉宁教授回来了。  
 比屋定突然变成放下心来的表情，把自己桌上的文件夹打了开来。  
 “欢迎回来，教授。这是今天汇总出的一些数据——”  
-“*Maho，stop！*  
+“*Maho，stop!*  
 &emsp;&emsp; 两个人待会不出去玩玩吗？难得的平安夜呢。  
 &emsp;&emsp; 工作都放一边，去吃点东西吧！  
 &emsp;&emsp; 还是说，有先约了呢？”  
-“教授，*nice！*  
+“教授，nice！  
 “嗯……？”  
 比屋定像是被打垮了，变回一幅认命的表情；“红莉栖”则是因为接到了绝佳的助攻而兴奋地叫出声来，弄得雷斯吉宁教授一脸疑惑。于是我只能负担起解释的角色：  
 “那个，教授？我的朋友们一会儿会开圣诞派对，可以的话请一起——”  
 “太棒了！请务必让我也参加！”  
 没等我说完教授就立刻就答应了。  
-“当然，*Maho*也会去的吧？”  
+“当然，*Maho* 也会去的吧？”  
 “啊……真是的……”  
 这一刻，比屋定的退路完全没了。  
 “就这样决定了呢！”
@@ -177,7 +177,7 @@
 “红莉栖”挂断电话之后，我的心里超出想象的轻松。  
 果然，我心底里，是很喜欢牧濑红莉栖的……我再次深刻地感受到。  
 “但是，向人工智能道歉这种事，有那么奇怪吗？  
-&emsp;&emsp; 我的朋友——之前在*MayQueen*里介绍过的那个家伙——  
+&emsp;&emsp; 我的朋友——之前在 *MayQueen* 里介绍过的那个家伙——  
 &emsp;&emsp; 一直对二次元的女孩子们下跪之类的……”  
 “这、这种精神……对我来说有点……”  
 糟糕，不小心冷场了。例子举得太糟糕了。  
