--- a/steins_gate_0/docs/0026.md
+++ b/steins_gate_0/docs/0026.md
@@ -39,9 +39,9 @@
 “对了，冈伦的客人呢？”  
 事先已经告知了我要带雷斯吉宁教授和比屋定一起过来的事，我马上招呼两位客人进屋。  
 “介绍一下，这位是雷斯吉宁教授。”  
-“*Merry Christmas！*”  
+*“Merry Christmas!”*  
 “呼哇~” “哇！” “喔喔！” “啊啦~”  
-雷斯吉宁教授与众不同的外表与高大的身型引起了女性众的惊叹，绹更是直接叫出了 “好大只！” 雷斯吉宁教授则是绅士地回应道 “谢谢，cute的大小姐。” 对此绹的应对却是“但是我爸爸更大只！” 真是可爱的小动物啊。  
+雷斯吉宁教授与众不同的外表与高大的身型引起了女性众的惊叹，绹更是直接叫出了 “好大只！” 他本人则是绅士地回应道 “谢谢，cute的大小姐。” 对此绹的应对却是“但是我爸爸更大只！” 真是可爱的小动物啊。  
 “那么，接下来还有另一位，比屋定真帆小姐。”  
 “大家好，初次见面。”  
 “呼哇~” “哇！” “喔喔！” “啊啦~”  
@@ -213,8 +213,8 @@
 总而言之，既然是我邀请比屋定来这个派对，先去向她说些安慰的话吧。  
 “很有趣的干杯问候哟。”  
 “真是让人自我厌恶……”  
-“说什么呢？不是很cool的cat嘛！”  
-“真帆喵，什么时候能来*MayQueen*工作喵？”  
+“说什么呢？不是很 *cool* 的 *cat* 嘛！”  
+“真帆喵，什么时候能来 *MayQueen* 工作喵？”  
 “没有那个打算啦……”  
 菲利斯跟雷斯吉宁教授也为了能让真帆振作起来而高兴地跟她说着话。  
 “铃小姐，来，干杯~”  
@@ -232,10 +232,10 @@
 于是真由理就把法式咸饼也推荐给了比屋定和教授他们。  
 “真帆小姐跟雷斯吉宁先生也是，请尝尝看~”  
 “谢谢。”  
-“嗯~好吃！这真是Oishi（好吃）啊！”  
+“嗯~好吃！这真是 *Oishi*（好吃）啊！”  
 “欸嘿嘿~”  
 “那，这边也试试怎么样？虾仁奶汁烤菜，还有，炸鸡也试着调了民族风味——”  
-“*Excellent！*”  
+*“Excellent!”*  
 “还真是讲究呢。”  
 由季勤快地给所有人分发着料理，但是，铃羽那边却好像一直没有去的样子。真由理一直用动作示意着让她去铃羽那儿，但是由季一直都在磨磨蹭蹭。应该是太过在意铃羽的感受了吧。但是，铃羽从刚才开始，就一直在对真由理和由季做的料理赞不绝口。毕竟大概从一个月前开始，这两个人就在LAB进行着料理修行。这也算是得到了回报吧。  
 “啊，还有蛋糕哟？枫自己装饰出来的呢！”  
