--- a/steins_gate_0/docs/0029.md
+++ b/steins_gate_0/docs/0029.md
@@ -124,7 +124,7 @@
 “不，不是那样的。做白日梦的人都有一个特征，他们的回答都是这样的——普金总统。  
 &emsp;&emsp; 而且戈里巴乔夫和列利钦这两位，也被称呼为总统。  
 &emsp;&emsp; 为此，研究员在暗地里称这个现象为‘总统病’……真是没品的名字。”  
-难，难道说……这些症状是，*Reading·Steiner*吗……看来除我之外，其他人也拥有的可能性很高，能力的程度上可能有所差别。虽然无法确定，但是α世界线的菲利斯的言行，隐隐约约让我感觉到，她也拥有那个能力。所以，下山所说的“做白日梦的人”，很有可能就是拥有*Reading·Steiner*的人。如果那些人和我一样，意识到了一个月前的世界线变动的话……如果吹雪也和我一样，有着另一条世界线的记忆的话……回答普金是总统，也并非不可思议。  
+难，难道说……这些症状是，*Reading·Steiner* 吗……看来除我之外，其他人也拥有的可能性很高，能力的程度上可能有所差别。虽然无法确定，但是α世界线的菲利斯的言行，隐隐约约让我感觉到，她也拥有那个能力。所以，下山所说的“做白日梦的人”，很有可能就是拥有 *Reading·Steiner* 的人。如果那些人和我一样，意识到了一个月前的世界线变动的话……如果吹雪也和我一样，有着另一条世界线的记忆的话……回答普金是总统，也并非不可思议。  
 “戈里巴乔夫？列利钦？”  
 “由季小姐不知道吗？历史课上应该教过吧。”  
 “我……高中时代一直是理科的……”  
@@ -236,10 +236,10 @@
 “……真悲哀喵。”  
 “是啊……”  
 接着，再次传来了引擎接近的声音。这次的声音来自门对面，基地的内部。是一部车牌上刻有字母E的漆黑豪华轿车，其后跟着一辆小型巴士。两辆车在门前停了下来，与旧识的再会时间，因此而结束了。  
-“*Welcome!*”  
+*“Welcome!”*  
 从漆黑的豪华轿车里，走下一位像篮球选手一样高大的美国军人。  
 “欢迎大家来到这里！我是哈蒙德。欢迎各位。  
-&emsp;&emsp; 那么，*Mr. Okabe*以外的各位，请乘坐巴士。”  
+&emsp;&emsp; 那么，*Mr. Okabe* 以外的各位，请乘坐巴士。”  
 这个男人操着一口不正宗却流利的日语。虽然满脸笑容，但却是一副说一不二的口气。其他的美军士兵则从刚才开始，就端着步枪一脸严肃的警戒着周围。下山一行人则只是在远处守着，默默地低着头，没有插手的意思。  
 “欸，冈伦以外是……什么意思……？”  
 “不用害怕。我们只是稍微向各位问一些话。  
