--- a/steins_gate_0/docs/0033.md
+++ b/steins_gate_0/docs/0033.md
@@ -4,7 +4,7 @@
 
 ![](../pics/049.png)
 
-比屋定就像少女一样眼睛闪闪发光。被带到这种地方，还会有这种眼神的女性，相当稀有吧。作为向导的我，已经完全被她无视了。比屋定迫不及待地在这条罗列着零件商店的狭窄道路上前进着，突然，在其中一家的店门口静静地站住了。在那里堆着许多塑料盒子，里面放满了大大小小各种各样的装满了破旧零件的袋子。似乎是从废弃的PC和家电之类的机器上拆下来的，无论哪个都很明显的古老而又肮脏，大多数都粘着灰尘。  
+比屋定就像少女一样眼睛闪闪发光。被带到这种地方，还会有这种眼神的女性，相当稀有吧。作为向导的我，已经完全被她无视了。比屋定迫不及待地在这条罗列着零件商店的狭窄道路上前进着，突然，在其中一家的店门口静静地站住了。在那里堆着许多塑料盒子，里面放满了大大小小各种各样的装满了破旧零件的袋子。似乎是从废弃的电脑和家电之类的机器上拆下来的，无论哪个都很明显的古老而又肮脏，大多数都粘着灰尘。  
 “这个，究竟是什么电路板呢？样式简直就像艺术品一样美丽。  
 &emsp;&emsp; 而且居然是矾土电路板！”  
 “啊，唔……？”  
@@ -34,14 +34,15 @@
 “大家都是一样呢！”  
 我可不觉得……大家都这样。倒不如说，小时候家里有焊锡的反而是比较少的？  
 “啊啊~想一直看下去……为什么我没有早一点来到这个地方？”  
-再这样陪她逛下去，估计无论多久都走不出这片地方，于是我提出差不多该去吃饭了，好不容易才成功把她从零件商店门口带走。到了大路上，因为这边是车站前，所以特别拥挤。在等着信号灯的人山人海中，几乎无法直线行走。那么，去哪里吃饭好呢？第一念头是*MayQueen+Nyan2*，不过考虑到以前带她去时的情景，还是不要选择那里比较好。但是……对于秋叶原新手来说的话，Sanpo（牛丼屋）的难度太高了。雁船？还是厨房次郎？GOGO咖喱也不错……  
+再这样陪她逛下去，估计无论多久都走不出这片地方，于是我提出差不多该去吃饭了，好不容易才成功把她从零件商店门口带走。到了大路上，因为这边是车站前，所以特别拥挤。在等着信号灯的人山人海中，几乎无法直线行走。那么，去哪里吃饭好呢？第一念头是 *MayQueen+Nyan²*，不过考虑到以前带她去时的情景，还是不要选择那里比较好。但是……对于秋叶原新手来说的话，Sanpo（牛丼屋）的难度太高了。雁船？还是厨房次郎？GOGO咖喱也不错……  
 
 “啊……”  
 正在我边走边想东想西的时候，比屋定被眼前的游戏中心吸引，停下了脚步，似乎是对一层摆放的夹娃娃机有兴趣。  
 “稍微……进去看看如何？”  
 对于比屋定的提议，我点了点头。一靠近夹娃娃机，比屋定就像小孩子一样贴在玻璃上，观察着里面。那里装着各种@ch衍生的角色商品化的玩偶，大小各异。难道比屋定也和红莉栖一样，是个隐藏的@cher？毕竟是关系亲密的前辈和后辈，的确有这个可能……于是我在比屋定耳边悄悄地念叨着咒文。  
-“nurupo……”  
-/* 注释：@ch用语，起源于程序员版某人的发言“让我们用ぬるぽ（nurupo）来指代NullPointerException吧”，逐渐发展成每次出现这个词就会有人吐槽“ガッ（ga~tsu）”来表示击打。有人说“nurupo”的时候，肯定会有别的什么人吐槽“ga！”，这已经成为一种约定了。*/  
+<abbr title="@ch用语，起源于程序员版某人的发言“让我们用ぬるぽ（nurupo）来指代NullPointerException吧”，逐渐发展成每次出现这个词就会有人吐槽“ガッ（ga~tsu）”来表示击打。有人说“nurupo”的时候，肯定会有别的什么人吐槽“ga！”，这已经成为一种约定了。">
+“*nurupo*……”  
+</abbr>
 “啥？那是什么，那个nuru……什么的？”  
 比屋定懵了。  
 “什，什么都不是！忘了吧。”  
