--- a/steins_gate_0/docs/0034.md
+++ b/steins_gate_0/docs/0034.md
@@ -97,7 +97,7 @@
 57亿人因此而死，噩梦般的奇迹的论文。  
 虽然中钵在时间机器发表会上提出的制作方法是抄袭自约翰·提托，但是《中钵论文》所记载的却是另一回事。尽管还没有亲自确认其内容，但我的推测是，红莉栖7月28日在这里给中钵看的是由她写下的“原版”，而《中钵论文》是它的劣化复制。  
 红莉栖所写的时间机器的制作方法——  
-这时我突然想到了，急忙掏出智能机打开了RINE，翻起那天在*MayQueen*与桶子的消息记录。  
+这时我灵光一闪，急忙掏出智能机打开RINE，翻起那天在 *MayQueen* 与桶子的消息记录。  
 “被送到桶子那里的……红莉栖的……笔记本电脑和硬盘……”  
 那个笔记本电脑和硬盘当中，可能会存有《中钵论文》的原版——应该说是《牧濑红莉栖论文》——的数据。  
 “难道，那个破解工作的委托人是……”  
