--- a/steins_gate_0/docs/0036.md
+++ b/steins_gate_0/docs/0036.md
@@ -126,21 +126,21 @@
 “*Maho*，你没事真是太好了！”  
 比屋定来到和光市的办公室后，已经到了的雷斯吉宁教授张开双臂，用高大的身体给了她一个大大的拥抱。  
 “教授……好难受！”  
-“哦哦，抱歉。*Hahaha！*”  
+“哦哦，抱歉。*Hahaha!* ”  
 办公室已经被整理得很干净了，没有任何入侵的痕迹。  
 “是教授你整理的吗？”  
-“虽说是被洗劫了，但是这里本身也只有我和*Maho*在使用，东西也不多呢。  
+“虽说是被洗劫了，但是这里本身也只有我和 *Maho* 在使用，东西也不多呢。  
 &emsp;&emsp; 之后的就交给警察吧。”  
 自从办公室被洗劫，已经过了两天。比屋定前天和昨天都是在菲莉丝家度过的，今天和雷斯吉宁教授取得联络，所以来和光市取行李。明天就和一开始预定的那样，准备回国，因此也要和这个办公室说再见了。  
 “犯人好像还没抓到吧？”  
 “啊。自从来了日本，灾难就不停啊。”  
 “是呢……”  
 两个人环视着已经空空如也的办公室。不管怎么说也是不得安宁的两个月啊。  
-“*Maho*觉得怎么样呢？毕竟日本也是你的另一个故乡吧？感想如何？”  
+“*Maho* 觉得怎么样呢？毕竟日本也是你的另一个故乡吧？感想如何？”  
 “想要快点回到大学，埋头开始做研究啊。这两个月只是一味地在整理资料。”  
-“*Hahaha*，*Maho*真是认真啊。”  
+“*Hahaha*，*Maho* 真是认真啊。”  
 “还有……能够感受这红莉栖度过了最后时光的国家的气氛……真是太好了。”  
-“*Maho*……”  
+“*Maho……*”  
 只是，还没有弄清楚红莉栖死亡的真相，来日本之后更是多了不少疑团，并且只能这样无可奈何地带着疙瘩回国，真是令人咬牙切齿。如果冈部把所有事都说出来的话……  
 “说起来……『Amadeus』的测试员的事，要怎么办？”  
 想起冈部于是就想到了这件事。比屋定和雷斯吉宁教授回国了的话，他的测试员身份也不得不结束了。  
@@ -149,17 +149,17 @@
 “我想让测试的事就这样继续下去，你觉得怎么样？”  
 “欸？！您认真的吗？”  
 “实际上你不是也看到了吗，  
-&emsp;&emsp; 和*Rintaro*说话时，‘*Kurisu*’做出了前所未有的反应。  
+&emsp;&emsp; 和 *Rintaro* 说话时，*‘Kurisu’* 作出了前所未有的反应。  
 &emsp;&emsp; 今后，不止是他，我也打算找更多的测试员参与进来。”  
 “在安全的层面上，不会有不安因素吗？  
 &emsp;&emsp; 美国和日本离得这么远，要是出了什么问题，我们无法应对啊。”  
-“没关系的，因为我信任着*Rintaro*呢！”  
+“没关系的，因为我信任着 *Rintaro* 呢！”  
 “不，这不是信不信任的问题……”  
-“而且，如果继续测试的话，*Maho*也能定期和*Rintaro*联络哟？”  
+“而且，如果继续测试的话，*Maho* 也能定期和 *Rintaro* 联络哟？”  
 “啥？！和我没关系的吧？！”  
 “是这样吗？”  
 “是的哟！”  
-“那么之后和*Rintaro*联络的事，就由我直接进行吧。”  
+“那么之后和 *Rintaro* 联络的事，就由我直接进行吧。”  
 “没、没意见啊。”  
 虽然感觉是被岔开话题了，但比屋定也因为害羞没能继续追究。只是，雷斯吉宁教授这么中意冈部，还是挺意外的。从相遇的那一刻起，教授好像就对这位叫做冈部伦太郎的青年特别有好感。只是单纯欣赏，或者因为他是红莉栖的朋友，还是说别的什么原因？比屋定并不知道。  
 
