--- a/steins_gate_0/docs/0037.md
+++ b/steins_gate_0/docs/0037.md
@@ -28,11 +28,11 @@
 对于真帆尖锐的反击，雷斯吉宁教授像小孩子一样无邪地笑了。  
 “从我的房间，看到这边灯还亮着——这个，请用。”  
 雷斯吉宁教授桌上放着的杯子正好是空的，真帆把保温壶里的咖啡倒了进去。并不是真帆喜欢的绵密香甜的欧蕾咖啡，而是对教授口味的黑咖啡。和蒸汽一起，一股好闻的香味在房间里散开。  
-“这真是让我吃惊啊，没想能喝到*Maho*泡的咖啡。”  
+“这真是让我吃惊啊，没想能喝到 *Maho* 泡的咖啡。”  
 “我好歹也是有这样的眼色啦。”  
 “但是，你不是很讨厌这样吗？  
 &emsp;&emsp; 那应该是，你来到这个研究所的第一天吧。  
-&emsp;&emsp; *Mary*给大家分发早间咖啡，到你的时候你，你却这样拒绝了——  
+&emsp;&emsp; *Mary* 给大家分发早间咖啡，到你的时候你，你却这样拒绝了——  
 &emsp;&emsp; ‘你在这里的任务就是泡咖啡吗？’  
 &emsp;&emsp; ‘有这个时间的话，快点开始工作如何？’这样。  
 &emsp;&emsp; 啊呀呀，真是来了个不得了的人呢，当时真的惊讶到我了。”  
@@ -54,8 +54,8 @@
 “晚上好，前辈。”  
 “这么晚辛苦你了。”  
 虽然她只是电脑上运行的程序，但不知不觉就这么说了。察觉到这一点的真帆不禁苦笑。交往了这么久，对于真帆来说，如今的“红莉栖”已经和人类没什么区别了。  
-“我并不是在欺负*Maho*哟。  
-&emsp;&emsp; 玛丽那件事也是，我其实挺看好*Maho*的。  
+“我并不是在欺负 *Maho* 哟。  
+&emsp;&emsp; 玛丽那件事也是，我其实挺看好 *Maho* 的。  
 &emsp;&emsp; 不讲情面，非常理性，又酷，而且还很有趣呢。  
 &emsp;&emsp; 所以才让她成为我的助手。  
 &emsp;&emsp; 当然……我也不讨厌现在温柔的你呢。”  
@@ -92,7 +92,7 @@
 区区程序居然自大到给我下套——真帆察觉到这点的时候，已经晚了。“红莉栖”和一直听着对话的雷斯吉宁教授都一脸奸笑地看着真帆。  
 “呜哼~哼~~”  
 真帆红着脸瞪着这两人。  
-“这样看起来，是‘*Kurisu*’的胜利呢。”  
+“这样看起来，是 *‘Kurisu’* 的胜利呢。”  
 “胜、胜负什么的一点关系也没有！我要睡觉去了，晚安！”  
 真帆愤懑难平地准备离开教授的房间，这时“红莉栖”从背后投来了会心一击的一句话：  
 “前辈，已经一个星期没有和冈部联系了哟。  
@@ -104,8 +104,8 @@
 “是吗，真可惜啊。”  
 这时雷斯吉宁教授不知为何，难过地左右摇了摇头。  
 “最近，因为共同研究，日本方面又要叫我过去。  
-&emsp;&emsp; 到时候，还想着要联系下*Rintaro*呢。  
-&emsp;&emsp; 我还在烦恼是否要带上*Maho*一起去的，  
+&emsp;&emsp; 到时候，还想着要联系下 *Rintaro* 呢。  
+&emsp;&emsp; 我还在烦恼是否要带上 *Maho* 一起去的，  
 &emsp;&emsp; 这样子看起来还是算了吧~”  
 “欸！？又要去日本吗！？”  
 这件事真帆完全是第一次听说。通常雷斯吉宁教授的项目的相关信息，都会事前通过研究所的内网通知自己的。  
@@ -114,7 +114,7 @@
 真帆条件反射地想说“想去”，又咽回去了。要是说了这话，又要被雷斯吉宁教授和“红莉栖”调侃了。尽管如此，真帆还是不想放弃这个机会。在日本，还有很多没做的事情。首先，还想再直接问冈部一些事——时间机器的事，红莉栖的事——绝不是因为想和冈部说话，和感情方面没有关系。  
 “……务必……请把我带上吧。”  
 结果还是放弃了抵抗，说出了自己的心声。  
-“*Oh！* 终于坦率起来了呢！”  
+“*Oh!* 终于坦率起来了呢！”  
 “那么来考虑下告白计划吧！”  
 “你们两个啊……”  
 事到如今，真帆也觉得每次都要吐槽和订正很麻烦。  
@@ -122,16 +122,16 @@
 “怎么说？”  
 “你不是在日本卷入了各种事件吗？就脑科学研究所而言，对这方面很是在意呢。”  
 “怎么会……！”  
-“有*Kurisu*的前例，不能再让优秀的人才遭遇危险了，理事们是这么考虑的。”  
+“有 *Kurisu* 的前例，不能再让优秀的人才遭遇危险了，理事们是这么考虑的。”  
 “我的话没有问题的！现在不是好好地站在这里吗！”  
-“哦……也就是说，*Maho*这么想去日本见*Rintaro*吗？”  
+“哦……也就是说，*Maho* 这么想去日本见 *Rintaro* 吗？”  
 “这差不多算是性骚扰了哟？”  
-“*Oh！* 这个还是放过我吧！”  
+“*Oh!* 这个还是放过我吧！”  
 “不过，前辈不认真考虑下交往吗？  
 &emsp;&emsp; 将来，冈部不是很可能到这边来的吗？  
 &emsp;&emsp; 这样的话，就应该现在就下手的。”  
 “请不要像爱管闲事的亲戚大妈一样说话……”  
-“*Maho*的想法我理解了，我也会去找理事谈谈的。  
+“*Maho* 的想法我理解了，我也会去找理事谈谈的。  
 &emsp;&emsp; 但是，并不能保证你一定能去日本。”  
 “好的，非常感谢。”  
 “我还是挺认真的呢……”  
@@ -141,9 +141,9 @@
 红莉栖生前是否真的完成了时间机器理论还不确定。但是，如果是真的，“红莉栖”的记忆深处，说不定还留有一些片段。不过，这种事情不可能当着雷斯吉宁教授的面说。在自己房间偷偷进行时间机器研究的事情也是，绝对不能公开。要是被研究所的人们知道了，毫无疑问肯定会被当成傻瓜的。说到底，这也并不是真帆原本的研究领域。  
 “那个……就这样，教授，我差不多该回房间睡觉了。”  
 真帆结束话题，留下装着咖啡的保温壶，准备离开研究室。  
-“啊，稍等一下。最近，‘*Maho*’的记忆资料，完全没有更新吧？”  
+“啊，稍等一下。最近，*‘Maho’* 的记忆资料，完全没有更新吧？”  
 “啊……？”  
-“是说『Amadeus』的‘*Maho*’哟。”  
+“是说『Amadeus』的 *‘Maho’* 哟。”  
 “啊，那个……”  
 “最后一次采集资料是去日本之前，不是吗？”  
 “那个，关于这个呢……”  
@@ -152,12 +152,12 @@
 &emsp;&emsp; 我考虑会不会给『Amadeus』留下不好的记忆呢……”  
 “虽然我理解你的心情，但是这样的话就无法进行对比实验了。”  
 所谓的对比试验，就是把各种体验学习之前和之后的记忆资料载入『Amadeus』，对其言行的不同之处进行对比研究，目的是探究体验和学习的有无对人类大脑产生的影响。因为红莉栖的逝去，现在已经全部托付给了真帆。  
-“现在的你，和『Amadeus』的‘*Maho*’记忆相差得太多，说是另一个人也不为过。”  
+“现在的你，和『Amadeus』的 *‘Maho’* 记忆相差得太多，说是另一个人也不为过。”  
 “是，是的，是这样呢……”  
 “这样下去的话，说不定要让你从这个项目里退出，找其他人代替了。”  
 “这个……”  
 真帆的脸沉了下来。  
-“不要总是和‘*Kurisu*’对话，偶尔也要顾及‘自己’，肯定很寂寞呢。  
+“不要总是和 *‘Kurisu’* 对话，偶尔也要顾及‘自己’，肯定很寂寞呢。  
 &emsp;&emsp; 明天，必须要进行记忆的更新，可以吧？”  
 “……明白了。”  
 真帆点点头，走出了研究室。不进行“真帆”的记忆更新的原因，除了对雷斯吉宁教授说明的以外，其实还有一个。就是伦太郎的话。  
@@ -172,7 +172,7 @@
 
 ![](../pics/056.png)
 
-“啊啦，原来是*Maho*嘛。”  
+“啊啦，原来是 *Maho* 嘛。”  
 “雷耶斯教授。这个时间还在工作吗？”  
 “你也是？”  
 “是啊，嘛……”  
