--- a/steins_gate_0/docs/0038.md
+++ b/steins_gate_0/docs/0038.md
@@ -2,93 +2,76 @@
 > 1.129954  
 > [ 2011/06/25 ] 。
 
-季节马上就要进入7月了
-不知是不是因为今年是干梅雨原因，东京已经呈现出了梅雨期后的天气
-不如说，气温已经早就变成夏天的炎热
-夏天吗
-也就是说…那件事之后，已经快要1年了
-在那样的周六午后
-在家里不仅酷暑难当，还被老爸烦着帮忙生意，于是我就这样来到了池袋车站附近
-1年前的话，还有Lab这个歇脚地，但是现在因为铃羽住在那，就尽量不前往那边
-但是这样一来，适合在休息日学习的地方就不怎么好找了
-去大学也嫌麻烦
-休息日教室说不定也不开放
-经过种种考量之后，决定了在离老家较近的这间咖啡店坐几个小时
-实际上，这一类的咖啡店里和我一样就1杯咖啡坐上几个小时的人非常多
-有的带来了笔记本电脑，有的读书
-我也加入了这些现充的队列了也说不定…心中这样苦笑道
-【嘟嘟噜——现在在哪？】
-【啊 在老地方的咖啡店啊】
-【刚才，去了冈伦的家，你不在】
-【去了啊，老爸没有给你添麻烦吧？】
-【没事的，还款待了麦茶】
-【不得不去买些东西，能陪我吗？】
-【那我现在就过去，在那等我哦】
-她去了我家了啊…
-我的老家『冈部青果店』，是古老的店铺街中的一家破旧的店，差不多建成有40年了。真的很破，是时候重新装修一下比较好
-呼…
-注意力分散了
-还有不到15分钟真由理就要来了，今天的学习就到此为止吧…
-中午的时候勤奋学习过了，差不多就这样了
-对于最近自己的专注度，我自己都有些吃惊
-因为有了目标，感觉到干劲涌了上来
-必须尽早去得了去维克多·孔多利亚大学
-维克多·孔多利亚大学，吗？
-和真帆的话，因为『Amadeus』的事经常地进行邮件或聊天呢
-那边好像研究很繁忙，总是一副想要睡觉的样子
-……
-你好
-…怎么了？为什么要压低声音？
-嘘——现在在店里面
-拜托了，别无视我的情况就联系我…
-你在哪里干什么我又不知道
-难道说，你希望被我24小时监视么？
-你睡觉的样子啊、洗澡的样子啊，全都想被偷窥吗？
-……
-……
-…不是一般的变态啊
-一副什么都知道的样子真是抱歉
-我联络过来的话，你不想接的话，不接也行
-不会因为这点事生气的
-是 是么…
-现在很困扰的样子，就如你所愿，挂了哦
-的确，用智能手机与3D模型的女孩一副正经的样子对话着的男子大学生，有够恶心的
-你啊…
-开 开玩笑的
-一直都有理睬我，至少、那个…
-有觉得感谢的
-…那些话就够了，总之先挂了
-啊 等——
-要是和“红莉栖”一一说明的话，很长时间都说不完的样子
-的确本体也是很能说的样子
-在这种地方和她对话的话，我会太在意周围的目光总是不能镇定下来
-我也提议过因为看着屏幕说话太羞耻，想要变成和平常打电话一样的形式来交谈
-但是这样一来“红莉栖”就有意见了
-——为什么我要可悲地一边看着你的脑袋一边说话？
-真不愧是个任性的程序，真是的…
-与真由理汇合后前往的是，东京手创馆
-进到空调十足的店里，有重生的感觉
-才6月份就这种热度，想到到了7、8月份该怎么办就不知所措
-那么，到底要买些什么东西？
-那个，要做宣传商品用的POP，所以，要用到的卡片啊，荧光笔啊
-今年准备在漫展卖同人本么？
-不是的，用在『冈部青果店』哦
-啊？说什么…？
-我的老家？
-今天，去冈伦家的时候，和叔叔谈到了这样的事
-“那么就让我真由喜来做”这样参选了
-喂喂…
-老爸那家伙，真是厚脸皮啊
-你没有必要做这事哦
-但是但是，真由喜是想要做才做的
-…真的好吗？
-因为总是受冈伦和叔叔阿姨的照顾呢
-…那么，作为补偿下次会送你礼物的
-真的？好高兴哦
-大致地转了一圈卖场，用于POP的材料种类相当的多
-我尽量不出声，交给真由理的品味了
-真由理花了相当长的时间，仔细地斟酌着该买哪个好
-只是，因为真由理平时在MayQueen+Nyan²的原因吗，品味该怎么说呢…偏向于萌系方向呢
+季节马上就要进入7月了。今年不知是不是干黄梅的原因，东京没有下梅雨的迹象，却已经呈现出了梅雨期后的天气。不如说，气温已经早就变成夏天的炎热了。  
+（夏天啊……）  
+也就是说……那件事之后，已经快要一年了。  
+这是个周六的午后。在家里不仅酷暑难当，还被老爸唠叨着帮忙生意，于是我就来到了池袋车站附近。一年前的话，还有LAB这个歇脚地，但现在因为铃羽住在那儿，就尽量不过去了。但是这样一来，在休息日适合学习的地方就不怎么好找了。去大学也嫌麻烦，休息日教室估计也不开放。经过种种考量之后，决定在离老家较近的这间咖啡店坐几个小时。实际上，这一类的咖啡店里和我一样，一杯咖啡坐上几个小时的人非常多，有的带来了笔记本电脑，有的在读书。我说不定也加入了这些现充的队列了……心中这样苦笑道。  
+
+正在咖啡店看书时，手机响起了RINE的消息提示音。  
+
+『嘟嘟噜~♪现在在哪？』  
+![](../pics/058.png)  
+『啊，老地方的咖啡店啊  
+&emsp;刚才去了冈伦的家，你不在』  
+「去了啊，老爸没有给你添麻烦吧？」  
+『没有哟，还款待了麦茶  
+&emsp;有些不得不买的东西，能陪我吗？』  
+![](../pics/059.png)  
+![](../pics/060.png)  
+『那我现在就过去，在那等我哦』  
+
+那家伙，去了我家了啊……  
+我的老家【冈部青果店】，是古老的商业街中的一家破旧的店，差不多建成有40年了。残破得很，是时候重新装修一下比较好。  
+“呼……”  
+注意力分散了。还有不到15分钟真由理就要来了，今天的学习就到此为止吧。中午的时候把该读的都读过了，嗯，也算是可以吧。对于最近自己的专注度，我自己都有些吃惊。因为有了目标，感觉到干劲涌了上来。必须尽早达到去维克多·孔多利亚大学的条件。  
+（维克多·孔多利亚大学啊……）  
+我和比屋定因为『Amadeus』的事有在定期进行邮件和聊天。那边好像研究很繁忙，总是一副睡眠不足的样子。  
+
+这时手机又响起了铃声，拿出来一看是“红莉栖”的来电。  
+
+“你好（悄声）。”  
+“……怎么了？为什么要压低声音？”  
+“嘘——！现在在店里面。拜托了，请别无视我的情况就联系我……”  
+“你在哪里干什么我又不知道。  
+&emsp;&emsp; 还是说，你希望被我24小时监视么？  
+&emsp;&emsp; 你睡觉的样子啊、洗澡的样子啊，全都想被偷窥吗？”  
+“啊……”  
+“哈……不是一般的变态啊。”  
+“是我太自以为是了真是抱歉……”  
+“我联络过来，你不想接的话，不接也行。不会因为这点事生气的。”  
+“是、是么……”  
+“好了，看你现在很困扰的样子，就如你所愿，挂了哦。  
+&emsp;&emsp; 的确，与手机上的3D模型女孩一本正经对话的男子大学生够恶心的。”  
+“你啊……”  
+“开、开玩笑的啦。  
+&emsp;&emsp; 一直都愿意搭理我，至少、那个……  
+&emsp;&emsp; 感谢你啦……是这么想的……”  
+“这种话就算了，总之先挂了啊。”  
+“啊，等——”  
+
+我挂断了电话。“红莉栖”说起话来总是很长时间都说不完的样子。的确本体也是滔滔不绝的性格。在这种地方和她对话，我会太在意周围的目光，感觉很不自在。我也提议过因为看着屏幕说话太羞耻，想要变成和平常打电话一样的形式来交谈。但是这样“红莉栖”就有意见了——为什么我要可悲地一边看着你的脑袋一边说话？真是个任性的程序，真是的……  
+
+与真由理汇合后来到了东京手创馆。进到空调十足的店里，有重生的感觉。才6月份就这种热度，真不知道到了7、8月份该怎么办。  
+“那么，到底要买些什么东西？”  
+“那个，要做宣传商品用的POP，所以，要买用到的卡片啊、荧光笔之类的。”  
+“今年准备在漫展卖同人本么？”  
+“不是的，用在『冈部青果店』的哟~”  
+“啊？你说什么……？”  
+我的老家？  
+“今天，去冈伦家的时候，和叔叔谈到了这件事。  
+“‘那么就让真由喜来做！’——这样参选了。”  
+“喂喂……”  
+老爸那家伙，真是厚脸皮啊。  
+“你没有必要做这事哦。”  
+“但是但是，真由喜是想要做才做的。”  
+“真的……没关系吗？”  
+“因为总是受冈伦和叔叔阿姨的照顾呢。”  
+“……那么，作为补偿下次会送你礼物的。”  
+“真的？好开心呐！”  
+
+![](../pics/061.png)  
+
+大致地转了一圈卖场，用于POP的材料种类相当的多。我尽量不出声，交给真由理的品味了。真由理花了相当长的时间，仔细地斟酌着该买哪个好。只是，因为真由理平时在*MayQueen+Nyan²*的原因吗，该怎么说呢……品味偏向于萌系方向呢
 虽然觉得交给真由理也没有什么危险…尽管这么说，被拜托的是真由理，所以我出手干涉也不对吧
 这里就放开胸襟，交给真由理的品味了
 因此，我就在卖场随便地转悠着等待真由理买完东西…但是
